# gcp-policytags-migrator

./: README.md  pyproject.toml  requirements.txt
assets/: mapping_table_ddl.sql
src/policy_tags_migrator/: constants.py  destination.py  mapping_table.py  migrator.py  policy_tags.py  source.py  util.py  validators.py
